--- a/src/app/adonde/home/home.component.html
+++ b/src/app/adonde/home/home.component.html
@@ -1,10 +1,14 @@
 <body>
-<a routerLink="/login" routerLinkActive="active" id="loginlink">Login</a>
-<div id="AppName">
-    <h1>Ad‌&#243;nde</h1>
-</div>
-<search-bar></search-bar>
-<div id="Quote">
-    <h4>"We travel not to escape life, but for life not to escape us"</h4>
-</div>
+    <div class="d-flex">
+        <a routerLink="/login" class="text-white text-right ml-auto p-2">Login</a>
+    </div>
+    <div class="d-flex m-5 p-3 justify-content-center">
+        <h1 class="text-white text-center">Ad‌&#243;nde</h1>
+    </div>
+    <div class="p-5">
+        <search-bar></search-bar>
+    </div>
+    <div class="d-flex justify-content-center p-5">
+        <h4 class="text-white text-center">"We travel not to escape life, but for life not to escape us"</h4>
+    </div>
 </body>
