--- a/src/app/adonde/login/login.component.html
+++ b/src/app/adonde/login/login.component.html
@@ -1,6 +1,6 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
-        <h4 id="AppName">Ad‌&#243;nde</h4>
+        <h4 class="text-white" id="AppName">Ad‌&#243;nde</h4>
         <div id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -9,29 +9,27 @@
             </ul>
         </div>
     </nav>
-    <div class="container bg-light" id="portalBody">
-        <div id="LoginTitle"><h1 id="LoginText">Login</h1></div>
-        <div class="container" id="LoginTerminal">
+    <div class="d-flex container bg-light flex-column p-5 col-md-6 rounded">
+        <h1 class="text-center">Login</h1>
+        <div class="container">
             <div class="form-group">
-                <label for="username" id="LoginLabel"><h4 id="LoginLabel">Email address:</h4></label>
+                <label for="username"><h4 class="text-dark text-center">Email address:</h4></label>
                 <input type="text" class="form-control" id="usernameInput" [(ngModel)]="user.email">
             </div>
             <div class="form-group">
-                <label for="password" id="LoginLabel"><h4 id="LoginLabel">Password:</h4></label>
+                <label for="password"><h4 class="text-dark text-center">Password:</h4></label>
                 <input type="text" class="form-control" id="passwordInput" [(ngModel)]="user.password">
             </div>
         </div> 
-        <p id="ForgotPswd">Forgot your password?</p> 
-        <div class="checkbox" style="text-align:center">
-            <label style="color:black;"><input type="checkbox"> Keep me signed in</label>   
+        <p class="text-center text-danger">Forgot your password?</p> 
+        <div class="checkbox text-center">
+            <label><input type="checkbox"> Keep me signed in</label>   
         </div>        
-        <div class="wrapper">
-            <br>
-            <button type="button" class="btn btn-primary" id="signInButton" (click)="login()">Sign In</button>
+        <div class="wrapper text-center p-3">
+            <button type="button" class="btn btn-primary" (click)="login()">Sign In</button>
         </div>
-        <div id="createaccount">
-            <br>
-            <a href routerLink="/signup" id="signup">Don't have an account? Click here.</a>    
+        <div class="text-center">
+            <a href routerLink="/signup">Don't have an account? Click here.</a>    
         </div>    
     </div>
 </body>
