--- a/src/app/adonde/search-bar/search-bar.component.html
+++ b/src/app/adonde/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
-<div id="SearchBar">
-    <form class="form-inline">
+<div class="d-flex justify-content-center container rounded bg-secondary">
+    <form class="form-inline m-auto">
         <div class="form-group">
             <input type="number" class="form-control" id="budget" placeholder="Budget" min="0" step="10" style="width: 100px;">
         </div>
@@ -14,6 +14,6 @@
             <label for="start-date">End Date: </label>
             <input type="date" class="form-control" id="end-date">
         </div>
-        <button type="button" class="btn btn-success" id="SearchSubmit">Search</button>
+        <button type="button" class="btn btn-success">Search</button>
     </form>
 </div>
