--- a/src/app/adonde/signup/signup.component.html
+++ b/src/app/adonde/signup/signup.component.html
@@ -1,33 +1,33 @@
 <body>
-                <nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
-                                <h4 id="AppName">Ad‌&#243;nde</h4>
-                                <div id="navbarNav">
-                                    <ul class="navbar-nav">
-                                        <li class="nav-item">
-                                            <a class="nav-link d-inline" href="#">Home <span class="sr-only"></span></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
+        <h4 class="text-white" id="AppName">Ad‌&#243;nde</h4>
+            <div id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link d-inline text-white" href="#">Home <span class="sr-only"></span></a>
+                    </li>
+                </ul>
+            </div>
+    </nav>
 
-<div class="container">
-    <div id="SignupName">
-        <h1>Signup</h1>
-        <form>
+    <div class="container d-flex m-auto flex-column bg-light justify-content-center col-md-4 rounded">
+        <h1 class="text-center p-2">Signup</h1>
+            <form class="m-auto">
                 <div class="form-group">
-                  <label id="label" class="col-form-label" for="formGroupforUserName">Your Name:</label>
-                  <input type="text" class="form-control" id="formGroupforUserName" placeholder="Name" [(ngModel)]="newUser.userName">
+                    <label id="label" class="col-form-label" for="formGroupforUserName">Your Name:</label>
+                    <input type="text" class="form-control" [(ngModel)]="newUser.userName" id="formGroupforUserName" placeholder="Name" name="username">
                 </div>
                 <div class="form-group">
-                  <label id="label" class="col-form-label" for="formGroupforEmail">Your Email:</label>
-                  <input type="text" class="form-control" id="formGroupforEmail" placeholder="Email" [(ngModel)]="newUser.email">
+                    <label id="label" class="col-form-label" for="formGroupforEmail">Your Email:</label>
+                    <input type="text" class="form-control" id="formGroupforEmail" placeholder="Email" [(ngModel)]="newUser.email" name="email">
                 </div>
                 <div class="form-group">
-                        <label id="label" class="col-form-label" for="formGroupforPassword">Password:</label>
-                        <input type="password" class="form-control" id="formGroupforPassword" placeholder="Password"[(ngModel)]="newUser.password" >
+                    <label id="label" class="col-form-label" for="formGroupforPassword">Password:</label>
+                    <input type="password" class="form-control" id="formGroupforPassword" placeholder="Password" [(ngModel)]="newUser.password" name="password">
                 </div>
-                <button type="button" class="btn btn-primary" (click)="signup()">Submit</button>
-        </form>
+                <div class="wrapper text-center p-3">
+                    <button type="button" class="btn btn-primary" (click)="signup()">Submit</button>
+                </div>
+            </form>
     </div>
-</div>
 </body>
