--- a/src/app/adonde/home/home.component.html
+++ b/src/app/adonde/home/home.component.html
@@ -1,15 +1,27 @@
 
 <body>
-    <div class="d-flex">
-        <a routerLink="/login" class="text-white text-right ml-auto p-2">Login</a>
-    </div>
-    <div class="d-flex m-5 p-3 justify-content-center">
-        <h1 class="text-white text-center">Ad‌&#243;nde</h1>
-    </div>
-    <div class="p-5">
-        <search-bar></search-bar>
-    </div>
-    <div class="d-flex justify-content-center p-5">
-        <h4 class="text-white text-center">"We travel not to escape life, but for life not to escape us"</h4>
-    </div>
-</body>
+        <div class="d-flex">
+            <a class="ml-auto p-2 text-white" routerLink="/login" routerLinkActive="active" id="loginlink">Login</a>
+        </div>
+        <div class="d-flex flex-column justify-content-center w-100 h-100">
+            <div class="my-auto">
+                <div class="d-flex">
+                    <div id="AppName" class="mx-auto text-white">
+                        <h1 class="display-1">
+                            Ad&#243;nde
+                        </h1>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="m-auto">
+                        <search-bar></search-bar>
+                    </div>
+                </div>
+                <div id="Quote" class="p-3 d-flex">
+                    <h4 class="text-white mx-auto">
+                        "We travel not to escape life, but for life not to escape us"
+                    </h4>
+                </div>
+            </div>
+        </div>
+        </body>
