--- a/src/app/adonde/search-bar/search-bar.component.css
+++ b/src/app/adonde/search-bar/search-bar.component.css
@@ -1,3 +1,9 @@
-.form-group {
-    margin: 10px;
+.date-picker.placeholder::before{
+    width:100%;    
+    color: #888888;
+    content:attr(placeholder);
+}
+
+.date-picker{
+    width:15rem;
 }
