--- a/src/app/adonde/search-bar/search-bar.component.html
+++ b/src/app/adonde/search-bar/search-bar.component.html
@@ -1,19 +1,34 @@
-<div class="d-flex justify-content-center container rounded bg-secondary">
-    <form class="form-inline m-auto">
-        <div class="form-group">
-            <input type="number" class="form-control" id="budget" placeholder="Budget" min="0" step="10" style="width: 100px;">
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control" id="origin" placeholder="Origin" style="width: 150px;">
-        </div>
-        <div class="form-group">
-            <label for="start-date">Start Date: </label>
-            <input type="date" class="form-control" id="start-date">
-        </div>
-        <div class="form-group">
-            <label for="start-date">End Date: </label>
-            <input type="date" class="form-control" id="end-date">
-        </div>
-        <button type="button" class="btn btn-success">Search</button>
-    </form>
+<div id="SearchBar" class="d-flex justify-content-between bg-light rounded p-2">
+        <form class="form-inline my-auto">
+            <div class="form-group mx-3">
+                <input type="number" class="form-control" id="budget" 
+                placeholder="Budget" min="0" step="10"
+                name="budget" [(ngModel)]="newQuery.budget">
+            </div>
+            <div class="form-group mr-3">
+                <input type="text" class="form-control" id="origin" 
+                placeholder="Origin" style="width: 150px;"
+                name="origin" [(ngModel)]="newQuery.origin">
+            </div>
+            <div class="form-group">
+                <input type="date" 
+                class="form-control date-picker" id="start-date"
+                [ngClass]="{ 'placeholder': !newQuery.startDate}"
+                onfocus="javascript: $( this ).removeClass('placeholder');" 
+                onblur="javascript: if( !this.value ) $( this ).addClass('placeholder');"
+                placeholder="Start Date"            
+                name="startDate" [(ngModel)]="newQuery.startDate">
+            </div>
+            <div class="form-group">
+                <input type="date" 
+                class="form-control date-picker" id="end-date"
+                [ngClass]="{ 'placeholder': !newQuery.endDate}"
+                onfocus="javascript: $( this ).removeClass('placeholder');" 
+                onblur="javascript: if( !this.value ) $( this ).addClass('placeholder');"
+                placeholder="End Date"            
+                name="endDate" [(ngModel)]="newQuery.endDate">
+            </div>
+            <button type="button" class="btn btn-success ml-3" id="SearchSubmit"
+            routerLink="/searchResults">Search</button>
+        </form>
 </div>
