--- a/search-results/search-results.component.html
+++ b/search-results/search-results.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
-  <h4 id="AppName">Ad‌&#243;nde</h4>
-  <div id="navbarNav">
-    <ul class="navbar-nav">
+  <h4 class="fixed-top ml-3 mt-2" id="AppName">Ad‌&#243;nde</h4>
+  <div class="ml-auto" id="navbarNav">
+    <ul class="navbar-nav ">
       <li class="nav-item">
         <a href routerLink="/login" class="nav-link d-inline">Login
           <span class="sr-only"></span>
