--- a/src/app/adonde/pass-change/pass-change.component.html
+++ b/src/app/adonde/pass-change/pass-change.component.html
@@ -1,5 +1,5 @@
 <div id="AppName" class="fixed-top">
-    <h1>Ad‌&#243;nde</h1>
+    <h1 routerLink="/home" routerLinkActive="active">Ad‌&#243;nde</h1>
 </div>
 <br>
 <div class="container">
