--- a/src/app/adonde/home/home.component.css
+++ b/src/app/adonde/home/home.component.css
@@ -1,69 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Lobster');
 
 body {
-    background: no-repeat center center fixed;
-    height: 100%;
-    width: 100%;
-    -webkit-animation: change-bg 60s infinite;
-    animation: change-bg 60s infinite;
-    -webkit-background-size: cover;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-  
-  @-webkit-keyframes change-bg{
-    0%  { background-image: url('/src/images/4.jpg'); }
-    5%  { background-image: url('/src/images/1.jpg'); }
-    10% { background-image: url('/src/images/7.jpg'); }
-    15% { background-image: url('/src/images/8.jpg'); }
-    20%  { background-image: url('/src/images/9.jpg'); }
-    25%  { background-image: url('/src/images/6.jpg'); }
-    30%  { background-image: url('/src/images/10.jpg'); }
-    35%  { background-image: url('/src/images/11.jpg'); }
-    40%  { background-image: url('/src/images/12.jpg'); }
-    45%  { background-image: url('/src/images/13.jpg'); }
-    50% { background-image:  url('/src/images/2.jpg');  }
-    55%  { background-image: url('/src/images/14.jpg'); }
-    60%  { background-image: url('/src/images/15.jpg'); }
-    65%  { background-image: url('/src/images/16.jpg'); }
-    70%  { background-image: url('/src/images/17.jpg'); }
-    75% { background-image:  url('/src/images/5.jpg');  }
-    80%  { background-image: url('/src/images/18.jpg'); }
-    85%  { background-image: url('/src/images/19.jpg'); }
-    90%  { background-image: url('/src/images/20.jpg'); }
-    95%  { background-image: url('/src/images/21.jpg'); }
-    100% { background-image: url('/src/images/3.jpg'); }
-  }
-  
-  @keyframes change-bg {
-    0%  { background-image: url('/src/images/4.jpg'); }
-    5%  { background-image: url('/src/images/1.jpg'); }
-    10% {background-image: url('/src/images/7.jpg'); }
-    15% { background-image: url('/src/images/8.jpg'); }
-    20%  { background-image: url('/src/images/9.jpg'); }
-    25%  { background-image: url('/src/images/6.jpg'); }
-    30%  { background-image: url('/src/images/10.jpg'); }
-    35%  { background-image: url('/src/images/11.jpg'); }
-    40%  { background-image: url('/src/images/12.jpg'); }
-    45%  { background-image: url('/src/images/13.jpg'); }
-    50% { background-image:  url('/src/images/2.jpg');  }
-    55%  { background-image: url('/src/images/14.jpg'); }
-    60%  { background-image: url('/src/images/15.jpg'); }
-    65%  { background-image: url('/src/images/16.jpg'); }
-    70%  { background-image: url('/src/images/17.jpg'); }
-    75% { background-image:  url('/src/images/5.jpg');  }
-    80%  { background-image: url('/src/images/18.jpg'); }
-    85%  { background-image: url('/src/images/19.jpg'); }
-    90%  { background-image: url('/src/images/20.jpg'); }
-    95%  { background-image: url('/src/images/21.jpg'); }
-    100% { background-image: url('/src/images/3.jpg'); }
-  }
+    background-image: url("https://s2.starladder.com/uploads/ckeditor/elfinder/WESG%202017/announcement/Barcelona-2.jpg");
+    background-repeat: no-repeat;
+    background-size:cover;
+}
 
 h1 {
+    font-size: 7em;
     font-family: 'Lobster', cursive;
 }
 
@@ -71,6 +16,21 @@ h4 {
     font-family: 'Open Sans', sans-serif;
 }
 
-.mySlides {
-    display: none;
+*/
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+
+div {
+    z-index: 5;
 }
+  
+
+
+#appName {
+    font-family: 'Lobster', cursive;
+}
+
+/* h4 {
+    font-family: 'Open Sans', sans-serif;
+} */
