--- a/src/app/adonde/login/login.component.html
+++ b/src/app/adonde/login/login.component.html
@@ -1,35 +1,46 @@
+<bg-animation style="z-index: 0;" class="w-100 h-100 fixed-top"></bg-animation>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
-        <h4 class="text-white" id="AppName">Ad‌&#243;nde</h4>
+        <a class="text-white h4" id="AppName" routerLink="/">Ad‌&#243;nde</a>
         <div id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link d-inline text-white" href="#">Home <span class="sr-only"></span></a>
+                    <a class="d-inline text-white" routerLink="/">Home
+                        <span class="sr-only"></span>
+                    </a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class="d-flex container bg-light flex-column p-5 col-md-6 rounded">
-        <h1 class="text-center">Login</h1>
+    <div class="d-flex container bg-light flex-column px-5 pb-4 pt-2 col-md-4 rounded mt-4">
+        <h1 class="text-center display-4 mb-3">Login</h1>
         <div class="container">
             <div class="form-group">
-                <label for="username"><h4 class="text-dark text-center">Email address:</h4></label>
-                <input type="text" class="form-control" id="usernameInput" [(ngModel)]="user.email">
+                <!-- <label for="username">
+                    <h4 class="text-dark text-center lead">Email address</h4>
+                </label> -->
+                <input type="text" class="form-control lead" id="usernameInput" placeholder="Email" [(ngModel)]="user.email">
             </div>
             <div class="form-group">
-                <label for="password"><h4 class="text-dark text-center">Password:</h4></label>
-                <input type="text" class="form-control" id="passwordInput" [(ngModel)]="user.password">
+                <!-- <label for="password">
+                    <h4 class="text-dark text-center lead">Password</h4>
+                </label> -->
+                <input type="text" class="form-control lead" id="passwordInput" placeholder="Password" [(ngModel)]="user.password">
             </div>
-        </div> 
-        <p class="text-center text-danger">Forgot your password?</p> 
+        </div>
         <div class="checkbox text-center">
-            <label><input type="checkbox"> Keep me signed in</label>   
-        </div>        
+            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+                <input type="checkbox" id="remember" class="custom-control-input" (click)="remember()">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Keep Me Logged In</span>
+            </label>
+        </div>
         <div class="wrapper text-center p-3">
+            <!--<button type="button" class="btn btn-primary" (click)="login()">Sign In</button>-->
             <button type="button" class="btn btn-primary" (click)="login()">Sign In</button>
         </div>
-        <div class="text-center">
-            <a href routerLink="/signup">Don't have an account? Click here.</a>    
-        </div>    
+        <a class="text-center text-dark mb-3" routerLink="/reset"><small>Forgot your password?</small></a>
+        <a class="text-center" href routerLink="/signup">Don't have an account? Click here!</a>
     </div>
 </body>
