--- a/src/app/adonde/search-results/search-results.component.css
+++ b/src/app/adonde/search-results/search-results.component.css
@@ -5,8 +5,11 @@
     font-family:'Lobster', cursive;
 }
 
-.card-group{
-    display: flex;
+#ResultsName{
+    padding: 5% 0 0 0%;
+    font-size: 80px;
+    color: #000;
+    /* font-family: 'Merriweather', serif; */
 }
 
 .card {
@@ -14,3 +17,14 @@
     height: 30em;
 }
 
+#login {
+    color: black;
+}
+
+#login:hover {
+    color: #0056b3;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
