--- a/src/app/adonde/search-results/search-results.component.html
+++ b/src/app/adonde/search-results/search-results.component.html
@@ -1,58 +1,83 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
-    <h4 id="AppName">Ad‌&#243;nde</h4>
-        <div id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href routerLink="/login" class="nav-link d-inline">Login <span class="sr-only"></span></a>
-                </li>
-            </ul>
-        </div>
+  <a class="fixed-top-left ml-3 mt-2 h4" id="AppName" routerLink="/home">Ad‌&#243;nde</a>
+  <div class="ml-auto" id="navbarNav">
+    <ul class="navbar-nav ">
+      <li class="nav-item">
+        <a href routerLink="/login" class="d-inline" id="login">Login
+          <span class="sr-only"></span>
+        </a>
+      </li>
+    </ul>
+  </div>
 </nav>
 <div class="container">
   <div id="ResultsName">
-    <h1>Results</h1>
+    <h1 class="display-4">
+      Results
+    </h1>
   </div>
-  <div class="jumbotron" id="advanced-search">
-    <h5> Advanced Search </h5>
-    Show Advanced Search: <input type="checkbox">
-    <div class="container" id="advanced-search-attributes">
-      <label class="p-3">Origin</label><input type="text" value="newQuery.origin"
-      placeholder={{newQuery.origin}} 
-      [(ngModel)]="newQuery.origin" >
-      <label class="p-3">Budget</label><input type="number" value="newQuery.budget"
-      placeholder={{newQuery.budget}}
-      [(ngModel)]="newQuery.budget">
-      <label class="p-3">Start Date</label><input type="Date" value="newQuery.startDate"
-      [(ngModel)]="newQuery.startDate">
-      <label class="p-3">End Date</label><input type="Date" value="newQuery.endDate"
-      [(ngModel)]="newQuery.endDate">
-      <div>
-        <input type="checkbox" class="d-inline" value="">
-          <label for="sel1" class="d-inline">Location Category</label>
-        <select class="form-control" id="sel1">
-          <option></option>
-          <option *ngFor="let category of locationCategories; let i = index;" 
-          (click)="newQuery.locationCategory = category">{{ category }}</option>
+
+  <div class="jumbotron p-2 d-flex flex-column bg-faded" id="advanced-search">
+
+    <search-bar bgcolor="bg-faded" class="mx-auto" (queryUpdated)="handleQueryUpdated($event)"></search-bar>
+
+    <p class="text-muted mx-auto mt-3">
+      <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+        <input type="checkbox" class="custom-control-input" (change)="toggleAdvanced()">
+        <span class="custom-control-indicator"></span>
+        <span class="custom-control-description">Show Advanced Search</span>
+      </label>
+    </p>    
+    <div class="container mt-3" id="advanced-search-attributes" [ngClass]="{'d-none': !advancedShowing}">
+      <form [formGroup]="changeData">
+      <div class="d-flex justify-content-center input-group col-md-6 mx-auto mb-3">
+        <span class="input-group-addon">
+          <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <input type="checkbox" id="check0" class="custom-control-input" (click)="check(0)">
+            <span class="custom-control-indicator"></span>
+          </label>
+        </span>
+        <select class="form-control w-50 d-inline" id="locationCategory" style="height:3em;" [ngClass]="dropdownColor" (change)="dropdownChange()"
+                formControlName="locationCategory">
+          <option class="text-secondary" [ngValue]="null">
+            Destination Category
+          </option>
+          <option class="text-dark" *ngFor="let category of locationCategories; let i = index;" [ngValue]="category">
+            {{ category }}
+          </option>
         </select>
       </div>
-      <div class="checkbox">
-        <label><input type="checkbox" value="">Minimum Distance</label>
-        <input type="number" class="form-control" id="min-distance" placeholder="Miles" min="0" step="10" style="width: 100px;"
-        [(ngModel)]="newQuery.minDistance">
+      <div class="d-flex justify-content-center input-group col-md-6 mx-auto mb-3">
+        <span class="input-group-addon">
+          <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <input type="checkbox" id="check1" class="custom-control-input" (click)="check(1)">
+            <span class="custom-control-indicator"></span>
+          </label>
+        </span>
+        <input type="number" class="form-control" id="minDistance" placeholder="Minimum Distance" min="0" step="10" style="width: 100px;"
+               [ngClass]="minmaxColor[0]" formControlName="minDistance">
+        <span class="input-group-addon" [ngClass]="minmaxColor[0]">miles</span>
       </div>
-      <div class="checkbox">
-        <label><input type="checkbox" value="">Maximum Distance</label>
-        <input type="number" class="form-control" id="max-distance" placeholder="Miles" min="0" step="10" style="width: 100px;"
-        [(ngModel)]="newQuery.maxDistance">
+      <div class="d-flex justify-content-center input-group col-md-6 mx-auto mb-3">
+        <span class="input-group-addon">
+          <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <input type="checkbox" id="check2" class="custom-control-input" (click)="check(2)">
+            <span class="custom-control-indicator"></span>
+          </label>
+        </span>
+        <input type="number" class="form-control" id="maxDistance" placeholder="Maximum Distance" min="0" step="10" style="width: 100px;"
+               [ngClass]="minmaxColor[1]" formControlName="maxDistance">
+        <span class="input-group-addon" [ngClass]="minmaxColor[1]">miles</span>
       </div>
-      <button type="button" class="btn btn-primary mt-4" 
-      (click)="updateSearch()"
-      [disabled]="!queries">Update</button>
-      <button type="button" class="btn btn-primary mt-4" (click)="saveSearch()">Save Search</button>
-    </div>  
-
-
-    <div class="jumbotron" *ngIf="queries.length > 0">
+      <div class="d-flex">
+        <button type="button" class="btn btn-primary my-2 ml-auto mr-2 col-md-2" (click)="updateSearch()" [disabled]="!(queries.length > 0)">Update</button>
+        <button type="button" class="btn btn-primary my-2 mr-auto ml-2 col-md-2" (click)="saveSearch()">Save Search</button>
+      </div>
+      </form>
+    </div>
+  </div>
+  
+<!--    <div class="jumbotron" *ngIf="queries.length > 0">
       <h5>Search Criteria</h5>
       <ul class="list-group">
         <li class="list-group-item" *ngIf="queries[0].budget"
@@ -75,21 +100,35 @@
             Maximum Distance: {{queries[0].maxDistance}}
         </li>
       </ul>
+    </div> -->
+
+
+  <br>
+  <br>
+
+  <div class="row" *ngIf="locations">
+    <div class="card border-info m-4" *ngFor="let location of locations; let i = index" [hidden]="!hiddenArray[i]">
+      <button type="button" class="close mr-1 cursor-pointer" aria-label="Close" 
+              style="position:absolute; right: 0; z-index: 1"
+              (click) = "removeFromView(i)">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      <img class="card-img-top" src="{{location.imagePath}}" alt="Card image cap" style="height:40%; position:relative">
+      <div class="card-body" style="height:50%; position:relative">
+        <h4 class="card-title">{{location.city}}</h4>
+        <p class="card-text" style="height:50%; overflow: hidden">{{location.description}}</p>
+        <br>
+        <div class="clearfix">
+          <p class="float-left" style="" >...</p>
+          <a tabindex="0" class="btn btn-info float-right cursor-pointer" role="button" data-toggle="popover" data-trigger="focus" title="Why" data-content="what">Quick View</a>
+        </div>  
+      </div>
+      <div class="card-footer d-flex">
+        <div class="ml-auto">
+          {{location.country}}
+        </div>
+      </div>
     </div>
   </div>  
 
-  <br>
-  <br>
-
-  <div class="row" *ngIf="locations.length > 0">
-    <div class="card border-info m-4" *ngFor="let location of locations">
-      <img class="card-img-top" src="/src/images/{{location.imageName}}" alt="Card image cap" style="height:50%">
-      <div class="card-body">
-        <h4 class="card-title">{{location.name}}</h4>
-        <p class="card-text">{{location.description}}</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-  </div>   
+<div class="d-flex "><small class="text-muted ml-auto" [hidden]="!isNull(hiddenArray)">Sourced from Wikipedia</small></div>
