--- a/src/app/adonde/home/home.component.html
+++ b/src/app/adonde/home/home.component.html
@@ -1,27 +1,8 @@
-<!--
-<body>
-    <div class="d-flex">
-        <a routerLink="/login" class="text-white text-right ml-auto p-2">Login</a>
-    </div>
-    <div class="d-flex m-5 p-3 justify-content-center">
-        <h1 class="text-white text-center">Ad‌&#243;nde</h1>
-    </div>
-    <div class="p-5">
-        <search-bar></search-bar>
-    </div>
-    <div class="d-flex justify-content-center p-5">
-        <h4 class="text-white text-center">"We travel not to escape life, but for life not to escape us"</h4>
-    </div>
-</body>
--->
 <bg-animation style="z-index: 0;" class="w-100 h-100 fixed-top"></bg-animation>
 
 <body>
     <div class="d-flex flex-column justify-content-center h-100 w-100">
-        <nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
-            <a class="text-white h4" id="AppName" href="/">Ad‌&#243;nde</a>
-            <a routerLink="/login" class="text-white text-right ml-auto p-1">Login</a>
-        </nav>
+        <navbar textcolor="text-white"></navbar>
 
         <div class="my-auto">
             <div class="d-flex">
