--- a/src/app/adonde/logout/logout.component.html
+++ b/src/app/adonde/logout/logout.component.html
@@ -1,3 +1,3 @@
 
 
-<button type="button" class="btn" id="logoutbutton" (click)="logout()">Logout</button>
+<a class="dropdown-item" (click)="logout()">Logout</a>
