--- a/src/app/adonde/search-results/search-results.component.html
+++ b/src/app/adonde/search-results/search-results.component.html
@@ -1,15 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
-  <a class="fixed-top-left ml-3 mt-2 h4" id="AppName" routerLink="/home">Ad‌&#243;nde</a>
-  <div class="ml-auto" id="navbarNav">
-    <ul class="navbar-nav ">
-      <li class="nav-item">
-        <a href routerLink="/login" class="d-inline" id="login">Login
-          <span class="sr-only"></span>
-        </a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<navbar textcolor="text-dark"></navbar>
 <div class="container">
   <div id="ResultsName">
     <h1 class="display-4">
@@ -76,31 +65,7 @@
       </form>
     </div>
   </div>
-  
-<!--    <div class="jumbotron" *ngIf="queries.length > 0">
-      <h5>Search Criteria</h5>
-      <ul class="list-group">
-        <li class="list-group-item" *ngIf="queries[0].budget"
-        >Budget: {{queries[0].budget}}</li>
-        <li class="list-group-item" *ngIf="queries[0].origin"
-        >Origin: {{queries[0].origin}}</li>
-        <li class="list-group-item">
-          Start Date: {{queries[0].startDate}}
-        </li>
-        <li class="list-group-item">
-          End Date: {{queries[0].endDate}}
-        </li>
-        <li class="list-group-item">
-          Location Category: {{queries[0].locationCategory}}
-        </li>
-        <li class="list-group-item">
-          Minimum Distance: {{queries[0].minDistance}}
-        </li>
-        <li class="list-group-item">
-            Maximum Distance: {{queries[0].maxDistance}}
-        </li>
-      </ul>
-    </div> -->
+     
 
 
   <br>
