--- a/src/app/adonde/login/login.component.html
+++ b/src/app/adonde/login/login.component.html
@@ -18,20 +18,18 @@
         <div class="container">
             <form [formGroup]="changeData">
                 <div class="form-group">
-                    <input type="text" class="form-control lead" id="emailInput" 
-                           placeholder="Email" formControlName="emailInput">
+                    <input type="text" class="form-control lead" id="emailInput" placeholder="Email" formControlName="email">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control lead" id="passwordInput" 
-                           placeholder="Password" formControlName="passwordInput">
+                    <input type="password" class="form-control lead" id="passwordInput" placeholder="Password" formControlName="password">
                 </div>
             </form>
         </div>
         <div class="checkbox text-center">
             <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-                <input type="checkbox" id="remember" class="custom-control-input" (click)="remember()"  [disabled]="!changeData.valid">
+                <input type="checkbox" id="remember" class="custom-control-input" (click)="remember()" [disabled]="!changeData.valid">
                 <span class="custom-control-indicator"></span>
-                <span class="custom-control-description">Keep Me Logged In</span>
+                <span class="custom-control-description">Remember Me</span>
             </label>
         </div>
         <div class="wrapper text-center p-3">
