--- a/src/app/adonde/signup/signup.component.html
+++ b/src/app/adonde/signup/signup.component.html
@@ -38,7 +38,7 @@
         </div>
         <div class="wrapper text-center pt-3">
             <!--<button type="button" class="btn btn-primary" (click)="login()">Sign In</button>-->
-            <button type="button" class="btn btn-primary" (click)="signup()">Sign In</button>
+            <button type="button" class="btn btn-primary" (click)="signup()">Sign Up</button>
         </div>
         <a class="text-center mt-3" routerLink="/login"><small>Return to login</small></a>
     </div>
