Servable Angular Project Update
-Search Results Changes
-Updated src (need to put sprite.png in images folder)
-Will have Flights page and Location Details Page added in next update!

--- a/search-results.component.html
+++ b/search-results.component.html
@@ -167,8 +167,8 @@
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
-          <div class="modal-content">
-              <div class="modal-header" *ngIf="selectedLocation">
+          <div class="modal-content" *ngIf="selectedLocation">
+              <div class="modal-header">
                   <h4 class="modal-title" id="myModalLabel">{{selectedLocation.city}}, {{selectedLocation.country}}</h4>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               </div>
