--- a/src/app/adonde/search-results/search-results.component.css
+++ b/src/app/adonde/search-results/search-results.component.css
@@ -28,3 +28,11 @@
 .cursor-pointer {
     cursor: pointer;
 }
+
+button:hover:enabled {
+    cursor: pointer;
+}
+
+.display-4:hover {
+    cursor: default;
+}
