--- a/src/app/adonde/pass-reset/pass-reset.component.html
+++ b/src/app/adonde/pass-reset/pass-reset.component.html
@@ -13,20 +13,23 @@
             </ul>
         </div>
     </nav>
-    <div class="d-flex container bg-light flex-column px-5 pb-4 pt-2 col-md-4 rounded mt-4">
+    <div class="d-flex container bg-light flex-column px-5 pb-4 pt-2 col-md-3 rounded mt-4">
         <h1 class="text-center display-4 mb-3">Password Reset</h1>
         <div class="container">
-            <div class="form-group">
-                <input type="text" class="form-control lead" id="emailInput" placeholder="Email" [(ngModel)]="newUser.name">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control lead" id="emailConfirm" placeholder="Confirm Email" [(ngModel)]="newUser.email">
-            </div>
+            <form [formGroup]="changeData">
+                <div class="form-group">
+                    <input type="text" class="form-control lead" id="emailInput" placeholder="Email" formControlName="email">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control lead" id="emailConfirm" placeholder="Confirm Email" formControlName="reemail">
+                </div>
+            </form>
         </div>
         <div class="wrapper text-center pt-3">
-            <!--<button type="button" class="btn btn-primary" (click)="reset()">Sign In</button>-->
-            <button type="button" class="btn btn-primary">Email me</button>
+            <button type="button" class="btn btn-primary" (click)="email()" [disabled]="!changeData.valid">Email me</button>
         </div>
-        <a class="text-center mt-3" routerLink="/login"><small>Return to login</small></a>
+        <a class="text-center mt-3" routerLink="/login">
+            <small>Return to login</small>
+        </a>
     </div>
 </body>
