--- a/src/app/adonde/signup/signup.component.css
+++ b/src/app/adonde/signup/signup.component.css
@@ -9,3 +9,36 @@
 #label {
     font-size: 1.25em;
 }
+
+.ng-valid {
+    border-color: #28a745;
+}
+
+.ng-valid:focus {
+    box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
+}
+
+.ng-invalid.ng-dirty {
+    border-color: #dc3545;
+}
+
+.ng-invalid.ng-dirty:focus {
+    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
+}
+
+.ng-invalid.ng-dirty:placeholder-shown {
+    border: 1px solid rgba(0,0,0,.15);
+}
+
+.ng-invalid.ng-dirty:placeholder-shown:focus {
+    border-color: #80bdff;
+    box-shadow: none;
+}
+
+button:hover:enabled {
+    cursor: pointer;
+}
+
+.display-4:hover {
+    cursor: default;
+}
