--- a/src/app/adonde/home/home.component.html
+++ b/src/app/adonde/home/home.component.html
@@ -17,11 +17,12 @@
                     <search-bar bgcolor="bg-light"></search-bar>
                 </div>
             </div>
-            <div id="Quote" class="p-3 d-flex">
-                <h4 class="text-white mx-auto lead">
+            <div id="Quote" class="mt-3 p-3 d-flex">
+                <h4 class="mx-auto text-white lead">
                     "We travel not to escape life, but for life not to escape us"
                 </h4>
             </div>
+            <div class="bg mx-auto rounded"></div>
         </div>
     </div>
 
