--- a/src/app/adonde/login/login.component.html
+++ b/src/app/adonde/login/login.component.html
@@ -14,6 +14,9 @@
         </div>
     </nav>
     <div class="d-flex container bg-light flex-column px-5 pb-4 pt-2 col-md-3 rounded mt-4">
+        <div class="alert alert-danger" [hidden]="loggedIn" role="alert">
+            Wrong email or password.
+        </div>
         <h1 class="text-center display-4 mb-3">Login</h1>
         <div class="container">
             <form [formGroup]="changeData">
