--- a/src/app/adonde/pass-change/pass-change.component.html
+++ b/src/app/adonde/pass-change/pass-change.component.html
@@ -1,19 +1,12 @@
 <bg-animation style="z-index: 0;" class="w-100 h-100 fixed-top"></bg-animation>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
-    <a class="text-white h4" id="AppName" routerLink="/">Ad‌&#243;nde</a>
-    <div id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="d-inline text-white" routerLink="/">Home
-            <span class="sr-only"></span>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <navbar textcolor="text-white"></navbar>
+
   <div class="d-flex container bg-light flex-column px-5 pb-4 pt-2 col-md-3 rounded mt-4">
+      <div class="alert alert-danger" [hidden]="!changed" role="alert">
+          Sorry- we were unable to change your password
+      </div>
     <h1 class="text-center display-4 mb-3">Password Change</h1>
     <div class="container">
       <form [formGroup]="changeData">
@@ -31,8 +24,8 @@
     <div class="wrapper text-center pt-3">
       <button type="button" class="btn btn-primary" (click)="change()" [disabled]="!changeData.valid">Change</button>
     </div>
-    <a class="text-center mt-3" routerLink="/login">
-      <small>Return to login</small>
+    <a class="text-center mt-3" routerLink="/edit">
+      <small>Return to Edit Account</small>
     </a>
   </div>
 </body>
