--- a/src/app/adonde/location-details/location-details.component.html
+++ b/src/app/adonde/location-details/location-details.component.html
@@ -30,6 +30,7 @@
                         <h4><span class="badge badge-danger">Safety Rating
                             <span class="badge badge-light">{{location.safety_rating}}</span>
                         </span></h4>
+                        <weather></weather>
                         
                     </div>
                     <iframe class="float-right mr-3"
@@ -41,7 +42,9 @@
             </div> 
     
     
-            <!--<flights></flights>-->
+            <flights></flights>
+            <br>
+            <br>
             <!--<location-reviews [locationReviews]="location.reviews"></location-reviews>-->
         </div>
     </body>
