--- a/src/app/adonde/weather/weather.component.css
+++ b/src/app/adonde/weather/weather.component.css
@@ -1,5 +1,4 @@
-WeatherName{
-    padding: 5% 0 0 0%;
-    font-size: 80px;
-    color: black;
+.card-header {
+    background-color: #ffd700;
+    
 }
