--- a/src/app/adonde/weather/weather.component.html
+++ b/src/app/adonde/weather/weather.component.html
@@ -4,8 +4,8 @@
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Temperature <span class="badge badge-info float-right">{{this.temperature}} &#176;F</span></li>
-          <li class="list-group-item">Humidity <span class="badge badge-info float-right">{{this.humidity}} %</span></li>
+          <li class="list-group-item">Humidity <span class="badge badge-info float-right">{{this.humidity}}%</span></li>
           <li class="list-group-item">Description <span class="badge badge-info float-right">{{this.description}}</span></li>
-          <li class="list-group-item">Wind Speed <span class="badge badge-info float-right">{{this.wind}}</span></li>
+          <li class="list-group-item">Wind Speed <span class="badge badge-info float-right">{{this.wind}} mph</span></li>
         </ul>
 </div>
