--- a/src/app/adonde/home/home.component.html
+++ b/src/app/adonde/home/home.component.html
@@ -1,7 +1,7 @@
 <bg-animation style="z-index: 0;" class="w-100 h-100 fixed-top"></bg-animation>
 
 <body>
-    <div class="d-flex flex-column justify-content-center h-100 w-100">
+    <div class="d-flex flex-column justify-content-center w-100">
         <navbar textcolor="text-white"></navbar>
 
         <div class="my-auto">
@@ -25,5 +25,5 @@
             <div class="bg mx-auto rounded"></div>
         </div>
     </div>
-
+<footercustom textcolor="text-white"></footercustom>
 </body>
