--- a/src/app/adonde/home/home.component.html
+++ b/src/app/adonde/home/home.component.html
@@ -25,5 +25,5 @@
             <div class="bg mx-auto rounded"></div>
         </div>
     </div>
-
+    <footercustom textcolor="text-white"></footercustom>
 </body>
