--- a/src/app/adonde/home/home.component.css
+++ b/src/app/adonde/home/home.component.css
@@ -9,6 +9,17 @@ div {
     font-family: 'Lobster', cursive;
 }
 
+.dropdown-pull-right {
+    float: right !important;
+    right: 0;
+    left: auto;
+}
+  
+.dropdown-pull-right>.dropdown-menu {
+    right: 0;
+    left: auto;
+}
+
 #AppName {
     cursor: default;
 }
@@ -25,4 +36,8 @@ h4 {
     background-color:black;
     z-index:5;
     opacity:0.5;
+}
+
+.w-100 {
+    height: 97vh;
 }
