--- a/src/app/adonde/location-details/location-details.component.html
+++ b/src/app/adonde/location-details/location-details.component.html
@@ -1,10 +1,63 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
-        <h4 class="text-black" id="AppName" routerLink="/home" routerLinkActive="active">Ad‌&#243;nde</h4>
-        <div id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link d-inline text-black" routerLink="/home" routerLinkActive="active">Home <span class="sr-only"></span></a>
-                </li>
-            </ul>
+<body>
+        <navbar></navbar>
+        <div class="container"><a href="/searchResults">
+            <i class="material-icons">arrow_back</i>
+            Back to Search Results</a>
         </div>
-</nav>
+        <div class="container" *ngIf="location">
+    
+            <div id="LocationName">
+                <h1 class="display-4">
+                  {{location.city}}
+                  <span class="text-muted">, {{location.country}}</span>
+                </h1>
+            </div>
+            
+            <div class="jumbotron bg-dark">
+                <div class="row">
+                    <div class="container float-left" style="width: 40%">
+                        <p class="text-white">{{location.description}}</p>
+                        <hr class="my-4">
+                        
+                        <h4><span class="badge badge-danger">Safety Rating
+                            <span class="badge badge-light">{{location.safety_rating}}</span>
+                        </span></h4>
+    
+                       
+                        
+                    </div>
+                    <iframe class="float-right mr-3 e2e-iframe-trusted-src"
+                        [src] = "trustedUrl"
+                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen>
+                    </iframe>
+                    <div class="clearfix"></div>
+                </div>
+            </div> 
+    
+            <div class="row">
+                <div class="container col-md-8 float-right">
+                        <h3 class="display-4" style="font-size:40px">Activities</h3>                
+                        <div class="jumbotron bg-dark" style="height:50%">
+                            <activities></activities>
+                        </div> 
+                </div>
+    
+                <div class="container col-md-4 float-right">
+                    <h3 class="display-4" style="font-size:40px">Forecast</h3>                
+                    <div class="jumbotron bg-dark" style="width:100%; height:50%">
+                        <div class="container float-right">
+                            <weather></weather>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div> 
+                </div>
+                <div class="clearfix"></div>
+            </div>    
+    
+    
+            <flights></flights>
+            <br><br>
+            <ratings *ngIf="location" (locationRatingsChange)="save()"></ratings>
+        </div>
+    </body>
+   
