--- a/src/app/adonde/navbar/navbar.component.html
+++ b/src/app/adonde/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-faded justify-content-between">
-        <a class="h4" [ngClass]="textcolor" id="AppName" routerLink="/home">Ad‌&#243;nde</a>
+        <a class="h4" [ngClass]="textcolor" id="appName" href="/">Ad‌&#243;nde</a>
         <a routerLink="/login" class="text-right ml-auto p-1" [ngClass]="textcolor" [hidden]="loggedIn">Login</a>
                 <ul class="navbar-nav" [hidden]="!loggedIn">
                     <li class="nav-item dropdown dropdown-pull-right">
                             <a class="nav-link dropdown-toggle" [ngClass]="textcolor" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Account
+                                Hi, {{this.name}}
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" routerLink="/">Edit my Account</a>
-                                <a class="dropdown-item"routerLink="/">My Places</a>
+                                <a class="dropdown-item" routerLink="/edit">Edit my Account</a>
+                                <a class="dropdown-item"routerLink="/saved">My Places</a>
                                 <div class="dropdown-divider"></div>
                                 <logout></logout>
                             </div>
