--- a/src/app/adonde/search-results/search-results.component.html
+++ b/src/app/adonde/search-results/search-results.component.html
@@ -10,6 +10,8 @@
 
     <search-bar bgcolor="bg-faded" class="mx-auto" (queryUpdated)="handleQueryUpdated($event)"></search-bar>
 
+    {{qService.sharedQuery | json}}
+
     <p class="text-muted mx-auto mt-3">
       <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
         <input type="checkbox" class="custom-control-input" (change)="toggleAdvanced()">
@@ -84,8 +86,10 @@
         <p class="card-text" style="height:50%; overflow: hidden">{{location.description}}</p>
         <br>
         <div class="clearfix">
-          <p class="float-left" style="" >...</p>
-          <a tabindex="0" class="btn btn-info float-right cursor-pointer" role="button" data-toggle="popover" data-trigger="focus" title="Why" data-content="what">Quick View</a>
+          <a tabindex="0" class="btn btn-success cursor-pointer" [hidden]="!loggedIn || savedArray[location.location_id]" role="button" data-toggle="popover" data-trigger="focus" title="Why" data-content="what" (click)="save(location.location_id)">Save</a>
+          <!--*ngIf="!isSaved(location.id)"-->
+          <a tabindex="0" class="btn btn-danger cursor-pointer" [hidden]="!loggedIn || !savedArray[location.location_id]" role="button" data-toggle="popover" data-trigger="focus" title="Why" data-content="what" (click)="unsave(location.location_id)">Unsave</a>
+          <a tabindex="0" class="btn btn-info float-right cursor-pointer" role="button" data-toggle="popover" data-trigger="focus" title="Why" data-content="what" [routerLink]="['/locations', location.location_id]">View Details</a>
         </div>  
       </div>
       <div class="card-footer d-flex">
